--- a/MyHouse/FrontEnd/index.html
+++ b/MyHouse/FrontEnd/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> 
     <script src="https://kit.fontawesome.com/da9e6ce9d6.js" crossorigin="anonymous"></script>
   </head>
   <body class="bg-[#F4F5F8]">
